# agentslab-apis

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/app/: README.md  main.py
src/app/db/: database.py  initial_data_loader.py  models.py
src/app/db/init_data/: customers.json  menu.json  specials.json
src/app/routers/: customers.py  menu_items.py  opening_hours.py  orders.py  schemas.py
tests/: conftest.py  test_db_data_loader.py  test_db_models.py  test_routers_customers.py  test_schemas_customers.py  test_schemas_menu_items.py  test_schemas_orders.py
